generated/checkers/gen/AllGen-UAF-67801fa67b94ebd0e4da7a77ac2d9f321b75fbe0/build_logs/syntax-repair-03/build_stderr_2.log
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:268:32: error: expected primary-expression before ‘.’ token
  268 |   const MemRegion *Target = Loc.getAsRegion();
      |                                ^
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:269:3: error: expected unqualified-id before ‘if’
  269 |   if (!Target)
      |   ^~
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:272:30: error: ‘getBaseObjectRegion’ was not declared in this scope
  272 |   const MemRegion *BaseObj = getBaseObjectRegion(Target);
      |                              ^~~~~~~~~~~~~~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:273:3: error: expected unqualified-id before ‘if’
  273 |   if (!BaseObj)
      |   ^~
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:276:3: error: ‘BaseObj’ does not name a type
  276 |   BaseObj = getRootAlias(BaseObj, State);
      |   ^~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:277:3: error: expected unqualified-id before ‘if’
  277 |   if (!BaseObj)
      |   ^~
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:281:3: error: expected unqualified-id before ‘if’
  281 |   if (const Stmt *const *PPub = State->get<PublishedObjMap>(BaseObj))
      |   ^~
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:283:3: error: expected unqualified-id before ‘if’
  283 |   if (!PubStmt)
      |   ^~
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:286:3: error: expected unqualified-id before ‘if’
  286 |   if (State->contains<AlreadyReportedSet>(BaseObj))
      |   ^~
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:292:3: error: expected unqualified-id before ‘if’
  292 |   if (const auto *BO = dyn_cast_or_null<BinaryOperator>(S)) {
      |   ^~
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:298:21: error: ‘C’ was not declared in this scope
  298 |   ExplodedNode *N = C.generateNonFatalErrorNode();
      |                     ^
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:298:21: note: suggested alternatives:
In file included from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/AST/ExprCXX.h:21,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/Analysis/CFG.h:18,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/Analysis/AnalysisDeclContext.h:22,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/Analysis/PathDiagnostic.h:17,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/BugReporter/BugReporter.h:17,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:1:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/AST/DeclCXX.h:2919:37: note:   ‘clang::LinkageSpecLanguageIDs::C’
 2919 | enum class LinkageSpecLanguageIDs { C = 1, CXX = 2 };
      |                                     ^
In file included from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/Basic/LangOptions.h:19,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/AST/Stmt.h:25,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/Analysis/PathDiagnostic.h:16,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/BugReporter/BugReporter.h:17,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:1:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/Basic/LangStandard.h:34:3: note:   ‘clang::Language::C’
   34 |   C,
      |   ^
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:299:3: error: expected unqualified-id before ‘if’
  299 |   if (!N)
      |   ^~
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:303:3: error: expected unqualified-id before ‘if’
  303 |   if (IsRefAcquire) {
      |   ^~
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:305:5: error: expected unqualified-id before ‘else’
  305 |   } else {
      |     ^~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:309:54: error: ‘BT’ was not declared in this scope
  309 |   auto R = std::make_unique<PathSensitiveBugReport>(*BT, Msg, N);
      |                                                      ^~
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:310:3: error: expected unqualified-id before ‘if’
  310 |   if (S)
      |   ^~
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:312:3: error: ‘R’ does not name a type
  312 |   R->addRange(PubStmt->getSourceRange());
      |   ^
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:313:3: error: ‘C’ does not name a type
  313 |   C.emitReport(std::move(R));
      |   ^
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:315:3: error: ‘State’ does not name a type
  315 |   State = State->add<AlreadyReportedSet>(BaseObj);
      |   ^~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:316:3: error: ‘C’ does not name a type
  316 |   C.addTransition(State);
      |   ^
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:319:1: error: expected declaration before ‘}’ token
  319 | } // end anonymous namespace
      | ^
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:291:8: warning: ‘{anonymous}::IsRefAcquire’ defined but not used [-Wunused-variable]
  291 |   bool IsRefAcquire = false;
      |        ^~~~~~~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:280:15: warning: ‘{anonymous}::PubStmt’ defined but not used [-Wunused-variable]
  280 |   const Stmt *PubStmt = nullptr;
      |               ^~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:272:20: warning: ‘{anonymous}::BaseObj’ defined but not used [-Wunused-variable]
  272 |   const MemRegion *BaseObj = getBaseObjectRegion(Target);
      |                    ^~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:135:6: warning: ‘bool {anonymous}::SAGenTestChecker::isGetRefLikeCall(const clang::Expr*, clang::ento::CheckerContext&) const’ defined but not used [-Wunused-function]
  135 | bool SAGenTestChecker::isGetRefLikeCall(const Expr *E, CheckerContext &C) const {
      |      ^~~~~~~~~~~~~~~~
make[3]: *** [tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/build.make:76: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/SAGenTestChecker.cpp.o] Error 1
make[2]: *** [CMakeFiles/Makefile2:31101: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/all] Error 2
make[1]: *** [CMakeFiles/Makefile2:31108: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/rule] Error 2
make: *** [Makefile:7495: SAGenTestPlugin] Error 2
